Correct client-grid's border-fitting
As described in d1ea5f575, the 1px-gaps appearing between cells for some
viewport sizes have been plugged (mostly; still a few blurry offsets for
Chrome on desktop, but imperfections are inevitable).

--- a/src/css/page.clients.css
+++ b/src/css/page.clients.css
@@ -19,9 +19,11 @@ h2{
 /** Grid of clients */
 #clients-list{
 	color: #c1c1c1;
+	border-top: 1px solid;
 	list-style: none;
 	padding: 0;
 	margin: 0;
+	font-family: Helvetica, Arial, sans-serif;
 }
 	/** Clearfix */
 	#clients-list::after{
@@ -30,20 +32,31 @@ h2{
 		clear: both;
 	}
 
+	/** Grid cell */
 	#clients-list > li{
-		border: 1px solid;
-		border-left-width: 0;
-		margin-bottom: -1px;
+		border: 0 solid;
+		border-width: 0 0 1px 1px;
 		width: 33.3333%;
 		float: left;
 		position: relative;
 	}
+		#clients-list > li:last-child::after{
+			content: "";
+			position: absolute;
+			left:	100%;
+			top:	0;
+			bottom:	-1px;
+			border-left: 1px solid;
+		}
+
+		/** Aspect ratio control */
 		#clients-list > li::before{
 			content: "";
 			display: block;
 			padding-top: 100%;
 		}
-		
+
+		/** Logo */
 		#clients-list > li > img{
 			position: absolute;
 			top:	50%;
@@ -62,7 +75,7 @@ h2{
 			left:	0;
 			top:	0;
 			bottom:	0;
-			right:	1px;
+			right:	0;
 			z-index: 2;
 			background: #009ed5;
 			color: #fff;
@@ -71,8 +84,10 @@ h2{
 		}
 			/** Client's name */
 			#clients-list .details > .name{
-				font: bold italic 1.25em Helvetica, Arial, sans-serif;
-				margin-bottom: 1.6em;
+				font-weight: bold;
+				font-style: italic;
+				font-size: 1.25em;
+				margin-bottom: 1.25em;
 			}
 
 			/** List of roles and responsibilities */
@@ -83,16 +98,11 @@ h2{
 			}
 
 
+
 /*=============================================================================*
 	1. TABLETS (600+)
 ===============================================================================*/
 @media (min-width: 37.5em){
-
-html.opaque-scrollbars{
-	min-width: 100%;
-	width: auto;
-	right: 0;
-}
 
 
 /**
@@ -148,20 +158,26 @@ html.opaque-scrollbars{
 	#clients-list::after{
 		position: absolute;
 		content: "";
-		height:	100%;
-		top:	0;
+		height: 100%;
 		border: 0 solid;
-		border-width: 0 1px;
 	}
+		/** Outer-most border enclosing grid */
 		#clients-list::before{
 			left:	0;
-			right:	50%;
+			right:	0;
+			top:	0;
+			bottom:	0;
+			margin:	-1px;
+			border-width: 1px;
 		}
 
+		/** Inner border running between each row */
 		#clients-list::after{
-			right:	-1px;
-			border-right-color: #fff;
+			left:	50%;
+			z-index: 20;
+			border-right: 1px solid;
 		}
+
 
 
 	/** Be doubly-sure hardware acceleration is applied */
@@ -192,32 +208,46 @@ html.opaque-scrollbars{
 		-o-transform:		rotateZ(90deg) scaleY(-1);
 		transform:			rotateZ(90deg) scaleY(-1);
 	}
-		#clients-list > li::after{
-			content: "";
-			position: absolute;
+		#clients-list > li:nth-child(odd){
+			z-index: 2;
 		}
+			/** Generate a full-height vertical divider for each two cells */
 			#clients-list > li:nth-child(odd)::after{
+				content: "";
+				position: absolute;
+				bottom:	-100%;
 				top:	0;
 				right:	0;
-				bottom:	-100%;
+				z-index: 4;
 				border-right: 1px solid;
 			}
+
 
 
 		/** Fade the blue text-block into sight when rolled over */
 		#clients-list > li > .details{
 			display: block;
 			opacity: 0;
+
 			-webkit-transition:	.3s ease opacity;
 			-moz-transition:	.3s ease opacity;
 			-o-transition:		.3s ease opacity;
 			transition:			.3s ease opacity;
 		}
-			#clients-list > li:nth-child(odd) > .details{
-				top: 1px;
-				bottom: 1px;
-				overflow: hidden;
+			/** Force hardware acceleration */
+			#clients-list > li > .details,
+			#clients-list > li > .details > .name,
+			#clients-list > li > .details > ul{
+				-webkit-backface-visibility:	hidden;
+				-moz-backface-visibility:		hidden;
+				backface-visibility:			hidden;
+
+				/** Prevent text flickering in some browsers (e.g., Firefox) */
+				-webkit-transform-style:		preserve-3d;
+				-moz-transform-style:			preserve-3d;
+				transform-style:				preserve-3d;
 			}
+
 			#clients-list > li:nth-child(even) > .details{
 				right: 1px;
 			}
@@ -225,4 +255,20 @@ html.opaque-scrollbars{
 			#clients-list > li:hover > .details{
 				opacity: 1;
 			}
+
+			#clients-list ul{
+				font-size: .9em;
+				line-height: 1.5;
+			}
+}
+
+
+
+/*=============================================================================*
+	2. DESKTOP (1024+)
+===============================================================================*/
+@media (min-width: 64em){
+	#clients-list{
+		top: 7.5em
+	}
 }
